syntax = "proto3";
package zpb;
option go_package = ".;zpb";
//@group {"name" : "LOGIN_CMD", "id" : 2}

//@message
message LoginAccount
{
  int32  type   = 1;
  string name = 2;
  string password = 3;
  int32  code = 4;
}
message Role{
  int32 id = 1;
  int32 owner_id = 2;
  int32 server_id = 3;
  string player = 4;
}
//@message
message LoginAccountAck
{
  int32  type   = 1;
  string name = 2;
  string password = 3;
  int32  code = 4;
}

//@message
message RegisterAccount
{
  int32   type = 1;
  string  name = 2;
  string  password = 3;
  string  phone = 4;
  string  email = 5;
  int32   code = 6;
}